--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
 <footer id="footer" class="site-gradient container-fluid text-center">
 <div id="social-media">
 <a href="https://www.facebook.com/ofloxindia" target="_blank" id="social-media-icons">
-<img id="social" src="images/svg/facebook.svg" alt="Facebook"></img>
+<img id="social" src="https://cdn.jsdelivr.net/gh/iamsinghyogendra/ytthumbnaildnld//facebook.svg" alt="Facebook"></img>
 </a>
 <a href="https://www.twitter.com/oflox3" target="_blank" id="social-media-icons">
-<img id="social" src="images/svg/twitter.svg" alt="Twitter"></img>
+<img id="social" src="https://cdn.jsdelivr.net/gh/iamsinghyogendra/ytthumbnaildnld/twitter.svg" alt="Twitter"></img>
 </a>
 <a href="https://www.youtube.com/channel/UCew_32IICfUDULSW5p86jCQ" target="_blank" id="social-media-icons">
-<img id="social" src="images/svg/youtube.svg" alt="YouTube"></img>
+<img id="social" src="https://cdn.jsdelivr.net/gh/iamsinghyogendra/ytthumbnaildnld/youtube.svg" alt="YouTube"></img>
 </a>
 <a href="https://www.instagram.com/ofloxindia" target="_blank" id="social-media-icons">
-<img id="social" src="images/svg/instagram.svg" alt="Instagram"></img>
+<img id="social" src="https://cdn.jsdelivr.net/gh/iamsinghyogendra/ytthumbnaildnld//instagram.svg" alt="Instagram"></img>
 </a>
 <a href="mailto:OfloxIndia@gmail.com" id="social-media-icons">
-<img id="social" src="images/svg/gmail.svg" alt="Email"></img>
+<img id="social" src="https://cdn.jsdelivr.net/gh/iamsinghyogendra/ytthumbnaildnld//gmail.svg" alt="Email"></img>
 </a>
 
 </div>
