--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="container text-center" id="about">
 <p>Thanks for using YouTube Thumbnail Downloader. You can find me on Social Media or <a href="https://tv.singhyogendra.com.np/p/home.html/" style="color:black" target="_blank"><u>Contact me</u></a>.</p>
 <br>
-<p>You can also download the latest version of this script, <a href="https://tv.singhyogendra.com.np/p/home.html/" style="color:black" target="_blank"><u>Click Here</u></a>.</p>
+<p>You can also download the latest version of this script, <a href="https://tv.singhyogendra.com.np/p/home.html" style="color:black" target="_blank"><u>Click Here</u></a>.</p>
 </div>
 <footer id="footer" class="site-gradient container-fluid text-center">
 <div id="social-media">
